- Correct intro screen height on mobile devices. - Remvoed oneColumnModeDomSort since it is for newer version of gridstack.js.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2504,6 +2504,9 @@ body
     @extend  .msf-body
     padding: 5%
 
+.msf-intro-body.is-mobile
+    height: calc(100% - 15px) !important
+
 .mat-tab-body-content
     overflow: hidden!important
 
